[tool.poetry]
name = "rustyaml"
version = "0.1.1"
license = "MIT"
description = "Python bindings for rust-yaml"
authors = ["Will Eaton <me@wseaton.com>"]
build = "build.py"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License"
]


[tool.poetry.dependencies]
python = ">=3.6.0,<4.0"

[tool.poetry.dev-dependencies]
setuptools-rust = "^0.12.1"
pytest = "^7.0.0"
black = "^20.8b1"
isort = "^5.8.0"
ipython = "^7"
pytest-benchmark = {extras = ["histogram"], version = "^3.4.1"}
PyYAML = "^5.4.1"


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=41.0.0", "wheel", "setuptools_rust>=0.10.2"]
build-backend = "poetry.core.masonry.api"
